chore: update .gitignore to exclude unnecessary files and directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 ~$*
+*.pyc
+.DS_Store
+backup
+chroma
+data
+.idea
+.gradio
+rag_test*
+results/rag_test*
+~*
+.gitignore
+debug_test_rag.ipynb
+exclude
+queries*
+*.tmp
+*~
+flas*
+visualizations
