--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,36 @@
 pypdf
-langchain
+langchain~=0.3.15
 chromadb # Vector storage
-pytest
+pytest~=8.3.4
+langchain-community
+gradio~=5.20.1
+sentence-transformers>=2.2.2
+langchain_chroma>=0.1.2
+einops~=0.8.0
+umap-learn
+llama-index
+unstructured
+numpy~=1.26.4
+matplotlib~=3.10.0
+pynvml~=12.0.0
+#torch==2.6.0+cu126 -f https://download.pytorch.org/whl/torch
+#flash-attn --no-build-isolation
+packaging~=24.2
+setuptools~=75.8.0
+wheel~=0.41.2
+transformers~=4.47.1
+safetensors~=0.5.1
+timm~=1.0.14
+torchvision~=0.21.0
+omegaconf~=2.3.0
+rich~=13.9.4
+scikit-learn
+python-dotenv~=1.0.1
+psutil~=6.1.1
+python-docx
+langchain-ollama
+langchain_huggingface
+torch~=2.6.0+cu126
+flash_attn~=2.7.4.post1
+pandas~=2.2.3
 boto3
